configmap-as-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-env
  labels:
    app: myapp
spec:
  containers:
    - name: test-con1
      image: nginx
      # 1. to use sepecifi pair from configmap as env
      ports:
        - containerPort: 80
