hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod
  labels:
    app: hostpathPod
spec:
  containers:
    - name: ubuntu-container
      image: ubuntu
      volumeMounts:
        - mountPath: /test-mnt
          name: test-vol
  volumes:
    - name: test-vol
      hostPath:
        path: /test-vol
