pod-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-1
  namespace: dev
  labels:
    app: nginx
    tier: dev
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
