nodeport-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-node-port
spec:
  type: NodePort
  selector:
    app: nginxDeploymentPod
  ports:
    - port: 80
      targetPort: 80
