network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-for-mysql-pod
spec:
  podSelector:
    matchLabels:
      role: mysql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: backend
          ports:
            - port: 3306
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: frontend
          ports:
            - port: 80
